[tool.poetry]
name = "repromon_app"
version = "1.0.2"
description = ""
authors = ["Vadim Melnik <vmelnik@docsultant.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.99.0"
#fastapi-sessions = "^0.3.2"
Jinja2 = "^3.1.2"
uvicorn = "^0.22.0"
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.16"
psycopg2 = "^2.9.7"
psycopg2-binary = "^2.9.7"
pydantic = "^1.10.9"
python-dotenv = "^1.0.0"
websockets = "^11.0.3"
python-jose = "^3.3.0"
passlib = { version = "^1.7.4", extras = ["bcrypt"] }

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
httpx = "^0.25.0"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
addopts = "--tb=short"
filterwarnings = [
    "error",
    # filed an issue: https://foss.heptapod.net/python-libs/passlib/-/issues/188
    "ignore:'crypt' is deprecated and slated for removal.*:DeprecationWarning:passlib",
    # https://github.com/ReproNim/repromon/issues/9
    "ignore: passing settings to sha256_crypt.hash\\(\\) is deprecated, .*:DeprecationWarning:passlib",
    # jose/jwt.py", line 311, in _validate_exp has deprecated code
    # now = timegm(datetime.utcnow().utctimetuple())
    "ignore: datetime.datetime.utcnow\\(\\) is deprecated .*:DeprecationWarning:jose",
]


[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
# This is where we specify where our app entry point(s) is by assigning
#function within modules to the name of a script to be run.
#The example run = "wsgi:main" is specifying that we want to create a command called "run," which will look in wsgi.py for a function called main(). With this set, we can then launch our app via the Poetry CLI by typing
#poetry run .

# use syntax like listed below from command line:
#
#        poetry run <name>
#
# e.g.:
#
#        poetry run srv
#
# or with custom environment variable
#
#        REPROMON_API_KEY=*** poetry run test_send_message
#

srv = "repromon_app.srv:main"
setup_db = "repromon_tools.setup_db:main"
send_message = "repromon_tools.send_message:main"
test_model = "repromon_app.tests.test_model:test_1"

[tool.codespell]
skip = '.git,*.pdf,*.svg'
#
# ignore-words-list = ''
